<resources>
    <string name="app_name">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">Новости</string>
    <string name="menu_about">Об игре</string>
    <string name="menu_heroes">Гои</string>
    <string name="menu_winrate">Винрейт гоев</string>
    <string name="menu_developers">О разработчике</string>
    <string name="hero_details">О Герое</string>
</resources>